# caishiji

./: .gitignore  Cargo.toml
src/: cli.rs  config.rs  context.rs  main.rs  memory.rs  messages.rs  permissions.rs  query.rs  state.rs
src/api/: anthropic.rs  mod.rs  retry.rs  types.rs
src/bootstrap/: mod.rs
src/tools/: bash.rs  executor.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs
src/tui/: input.rs  mod.rs  renderer.rs  repl.rs
